--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -2,8 +2,8 @@
 
     <table class="table mt-4">
       <div>
-      <h3>Khóa học của tôi</h3>
-      <a href="/me/trash/courses">Thùng rác</a>
+      <h3>Khóa học của tôi</h3>    
+      <a href="/me/trash/courses">Thùng rác ({{deleteCount}})</a>
     </div>
         <thead>
             <tr>
