--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,12 +1,31 @@
-<div class="mt-4">
 
-    <table class="table mt-4">
-      <div>
+<form name="container-form" class="mt-4" method="POST" action="/courses/handle-form-actions">
+
+  <table class="table mt-4">
+    <div>
       <h3>Khóa học của tôi</h3>    
       <a href="/me/trash/courses">Thùng rác ({{deleteCount}})</a>
     </div>
+    <br>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="checkboxAll">
+      <label class="form-check-label" for="checkboxAll">
+        Chọn tất cả
+      </label>
+  </div>
+<div>
+  <select class="custom-select custom-select-sm checkbox-select-all-options" name="action" required>
+    <option value="">---Hành Động---</option>
+    <option value="delete">Xóa</option>
+  </select>
+
+</div>
+  <br>
+  <button type="submit" class="btn btn-primary check-all-submit-btn btn-sm" disabled="disabled">Thực Hiện</button>
+
         <thead>
             <tr>
+                <th scope="col">#</th>
                 <th scope="col">#</th>
                 <th scope="col">Tên khóa học</th>
                 <th scope="col">Trình độ</th>
@@ -16,6 +35,11 @@
         <tbody>
             {{#each courses}}
             <tr>
+                <td>
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" name="coursesIds[]" value="{{this._id}}">                      
+                    </div>
+                </td>
                 <th scope="row">{{sum @index 1}}</th>
                 <td>{{this.name}}</td>
                 <td>{{this.level}}</td>
@@ -35,8 +59,7 @@
             {{/each}}
         </tbody>
     </table>
-</div>
-
+</form>
 {{!-- Confirm delete course --}}
 <div id="delete-course-modal" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
@@ -64,18 +87,50 @@
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         var courseId;
-        var deleteForm = document.forms['delete-course-form'];
-        var btnDeleteCourse = document.getElementById('btn-delete-course');
+        var deleteForm = document.forms['delete-course-form']
+        var containerForm = $('form[name="container-form"]')
+        var btnDeleteCourse = document.getElementById('btn-delete-course')
+        var checkboxAll = $('#checkboxAll')
+        var courseItemCheckbox = $('input[name="coursesIds[]"]')
+        var checkAllSubmitBtn = $('.check-all-submit-btn')
         // When dialog confirm clicked
         $('#delete-course-modal').on('show.bs.modal', function (event) {
-            var button = $(event.relatedTarget);
-            courseId = button.data('id');
-        });
+            var button = $(event.relatedTarget)
+            courseId = button.data('id')
+        })
         
         // When delete course btn clicked
         btnDeleteCourse.onclick = function () {
-            deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
-            deleteForm.submit();
+            deleteForm.action = '/courses/' + courseId + '?_method=DELETE'
+            deleteForm.submit()
+        }
+
+        //check box all changed
+        checkboxAll.change(function() {
+          var isCheckdAll = $(this).prop('checked')
+          courseItemCheckbox.prop('checked', isCheckdAll)
+          renderCheckAllSubmitBtn()
+
+        })
+
+
+        //courses item checkbox changed
+        courseItemCheckbox.change(function() {
+          var isCheckdAll = courseItemCheckbox.length === $('input[name="coursesIds[]"]:checked').length
+          checkboxAll.prop('checked', isCheckdAll)
+          renderCheckAllSubmitBtn()
+        })
+
+       
+
+        //Re-render check all submit button 
+        function renderCheckAllSubmitBtn() {
+          var checkedCount = $('input[name="coursesIds[]"]:checked').length
+          if(checkedCount > 0) {
+            checkAllSubmitBtn.removeAttr('disabled', false)
+          }else {
+            checkAllSubmitBtn.addAttr('disabled', true)
+          }
         }
     });
 </script>
