--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -4,6 +4,13 @@
       <h3>Khóa học đã xóa</h3>
     </div>
 
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">
+      Chọn tất cả
+    </label>
+  </div>
+
     <table class="table mt-4">
         <thead>
             <tr>
